--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,23 +1,33 @@
+@import "./variables.scss";
+@import "./mixin.scss";
+@import "./media_query.scss";
+
+$color :red;
+$font :4px;
+
 .box{
-  background-color: #EEE;
+  background-color: #FFF;
   height: 50px;
   margin: 5px 0px;
   padding: 10px;
   text-align: center;
-  border: 1px solid blue;
+  border: 1px solid $color;
   border-radius: 10px;
 
   text-align: center;
+  
+  & > h3 {
+    color : $color;
+  }
 }
 
-h3 {
-  color: blue;
-}
+
+
 
 input[type="text"] {
   width: 100%;
-  font-size: 15px * 4;
+  font-size : $font * 15;
   color: green;
-  border: 1px solid blue;
+  border: 1px solid $color;
   border-radius: 10px;
 }
